# DeuteriumCoin-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  LICENSE  Makefile.am  README.md  configure.ac  libnavcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
ci/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh
contrib/: README.md  gitian-build.sh  navcoin-cli.bash-completion  navcoin-qt.pro  navcoin-tx.bash-completion  (+6 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  daoversionbit.cpp  daoversionbit.h  dbwrapper.h  fs.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  (+59 more)
src/bench/: .gitignore  bench.h
src/blsct/: aggregationsession.cpp  aggregationsession.h  bulletproofs.cpp  bulletproofs.h  ephemeralserver.cpp  ephemeralserver.h  key.h  p2pmessage.cpp  rpc.cpp  rpc.h  scalar.cpp  scalar.h  transaction.cpp  transaction.h  types.cpp  types.h  verification.cpp  verification.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  program_actions.h  programs.cpp  programs.h  validation.h
src/consensus/dao/: flags.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/ctokens/: ctokens.h  tokenutxos.h
src/dotnav/: namedata.h  namerecord.h  names.cpp  names.h
src/mnemonic/: dictionary.cpp  dictionary.h  generateseed.cpp  generateseed.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: NavCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  aggregationsession.cpp  aggregationsession.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  communityfunddisplay.cpp  communityfunddisplaydetailed.cpp  communityfunddisplaypaymentrequest.cpp  communityfunddisplaypaymentrequestdetailed.cpp  communityfundpage.cpp  communityfundsuccessdialog.cpp  csvmodelwriter.h  daoconsultationcreate.cpp  daoconsultationcreate.h  daoconsultationvote.cpp  daoconsultationvote.h  daopage.cpp  daopage.h  daoproposeanswer.cpp  daoproposeanswer.h  daosupport.cpp  daosupport.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  guiconstants.h  guiutil.cpp  guiutil.h  (+82 more)
src/qt/forms/: coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: navcoin_af.ts  navcoin_af_ZA.ts  navcoin_ar.ts  navcoin_be_BY.ts  navcoin_bg.ts  navcoin_bg_BG.ts  navcoin_ca.ts  navcoin_ca@valencia.ts  navcoin_ca_ES.ts  navcoin_cs.ts  navcoin_cs_CZ.ts  navcoin_cy.ts  navcoin_da.ts  navcoin_de.ts  navcoin_el.ts  navcoin_el_GR.ts  navcoin_en.ts  navcoin_en_GB.ts  navcoin_eo.ts  navcoin_es.ts  navcoin_es_AR.ts  navcoin_es_CL.ts  navcoin_es_CO.ts  navcoin_es_DO.ts  navcoin_es_ES.ts  navcoin_es_MX.ts  navcoin_es_UY.ts  navcoin_es_VE.ts  navcoin_et.ts  navcoin_eu_ES.ts  navcoin_fa.ts  navcoin_fa_IR.ts  navcoin_fi.ts  navcoin_fr.ts  navcoin_fr_CA.ts  navcoin_fr_FR.ts  navcoin_gl.ts  navcoin_he.ts  navcoin_hi_IN.ts  navcoin_hr.ts  (+45 more)
src/qt/res/: navcoin-qt-res.rc
src/qt/res/themes/: app.qss  shared.qss
src/qt/res/themes/dark/: styles.qss
src/qt/res/themes/light/: styles.qss
src/qt/styles/: dark.cpp  dark.h  light.cpp  light.h
src/qt/test/: test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.cpp  ismine.h  navcoinconsensus.cpp  navcoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  blsct_tests.cpp  blsct_wallet.cpp  bulletproofsrangeproof_tests.cpp  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  navcoin-util-test.py  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+22 more)
src/test/data/: README.md  navcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+289 files in other folders)
